# equals

./: .gitignore  .readthedocs.yaml  .travis.yml  LICENSE  Makefile  README.md  README.rst  pyproject.toml  requirements-dev.txt  setup.py
.circleci/: config.yml
.github/workflows/: run-tests.yml
docs/: Makefile
docs/source/: api.rst  conf.py  index.rst  installation.rst  usage.rst
equals/: __init__.py  base_matcher.py  constraints.py  dict_matchers.py  equals.py  instance_of.py  iter_matchers.py  number_matchers.py  object_matchers.py  string_matchers.py
equals/constraints/: __init__.py  anything_false.py  anything_true.py  base.py  containing.py  containing_only.py  length.py  not_containing.py  with_attrs.py
equals/constraints/numbers/: base.py  between.py  greater_than.py  greater_than_or_equal.py  less_than.py  less_than_or_equal.py
equals/constraints/strings/: endswith.py  regex.py  startswith.py
fuzzy_match/: __init__.py  delegators.py  dict_matchers.py  expecter.py  iter_matchers.py  matchers.py  object_matchers.py
test/: bytes_test.py  conftest.py  dictionary_test.py  doubles_integration_test.py  expect_test.py  iterator_test.py  mock_integration_test.py  number_test.py  object_test.py  string_test.py
test/integration/: dobles_test.py  doubles_test.py  mock_test.py  schematics_test.py
